Bug 500130 - Unconfigurable popup when remote input has cursor off screen
Summary: Unconfigurable popup when remote input has cursor off screen
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-15 13:32 UTC by Chris Rizzitello
Modified: 2025-04-03 13:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Rizzitello 2025-02-15 13:32:03 UTC
SUMMARY
When using plasma 6.3 as a server every time your mouse leaves the screen an annoying persistent notification shows the entire time the mouse has left the screen.  I like that its being show but there is not where to configure this behavior.  There is option to disable it in notifications KCM (there is a portal section but turning them both off does not disable the dialog. You can't click on the configure button as the notification is not in the history and vanishes as soon as the cursor returns.

STEPS TO REPRODUCE
1.  Install deskflow 
2.  Use plasma 6.3 as the server
3.  Lever the screen
4.  Try to disable it in notifications..

OBSERVED RESULT
 The dialog is not able to be disable and pops up every time.

EXPECTED RESULT
Users should be able to disable the notification or at very least tell plasma they wish to not see the notification for that application again. I.e i use deskflow i know its controlling my machine but then some other app gets control That should be shown to the user. 

SOFTWARE/OS VERSIONS
Linux:  Arch 6.13.2
KDE Plasma Version:  6.3.0
KDE Frameworks Version: 6.10.0 
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-02-18 16:27:50 UTC
I'm not sure it's wise to let the user disable this notification. If the user can, then malicious software can too. And in either case, then the user has no indication of how to stop it if they forgot or never knew in the first place.
Comment 2 Chris Rizzitello 2025-02-18 16:36:20 UTC
It can not be on screen the entire time its way to distracting to have that pop up as im working on other things.  The thing is this when deskflow starts  I have Already accepted that it will be able to read my input to act as a server. I have to do this every time it starts up. Why do i see a dialog when the cursor leaves the screen ? What malware is taking the cursor off screen to even trigger this specific warning. Cause I dont see a persistent warning saying something is capturing input.. 

I was able to some how disable it as it got stuck on screen and i could then hit the config button, but am not able to reenable it now as now setting I can find will turn it back on so its not impossible to disable already.
Comment 3 Nate Graham 2025-02-18 18:04:01 UTC
Actually, I'm talking nonsense. Since it's just a standard Plasma notification, you *can* turn it off in System Settings > Notifications > Application Settings > KDE Portal Integration > Started Remote Desktop.

So we do indeed let people shoot themselves in the foot here. With great power comes great responsibility!
Comment 4 David Redondo 2025-02-18 19:18:26 UTC
Isn't that a different notification?
Comment 5 Chris Rizzitello 2025-02-18 21:14:55 UTC
That is a different dialog this one would be title "Input Capture Started"
Comment 6 David Redondo 2025-02-19 15:55:23 UTC
We need to add it to the notifyrc, which I didnt do at the time, my bad. This also means likely 6.4 material only since it requires new strings I believe?
Comment 7 FiveYellowMice 2025-02-22 00:25:04 UTC
I too find it distracting to have a notification pop in and out of existence as I switch the cursor between screens. It also covers a corner of the screen constantly. An option to disable it would be very useful.

Moreover, while telling the user about an escape hatch is important, having it occupy a decent part of the screen constantly feels a little extreme, especially after the user becomes well familiar with the software using the portal. Perhaps having the notification expire in a few seconds, like how browsers show "press Esc to exit fullscreen", will suffice. Although this would make it more distracting if it still appears every time the cursor moves out of the host screen. So maybe it can show the notification only once per session, on the first time input is captured? Having the notification disappear on a timer instead of immediately upon moving back to the host screen also gives the user a chance to click on the "configure notification" button (or a hypothetical "do not show again" button). Alternatively, just tell the user about the key combination in the confirmation dialog.

This seems to be the responsible commit: https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/c5de844f11710ef1c2b5844e67fd1d5035173b83 . I'm willing to write a PR if the above suggestion is deemed helpful.
Comment 8 Ben M 2025-02-23 20:34:47 UTC
The only way I was able to get the notification to disappear was to go to Notifications > System Notifications > Notification (Something Happened In the Program) and disable "show a popup." This is not an ideal solution since this likely has effects globally on other programs but most of my other notifications still work. I would like the option to turn off the notification off. 

My use case is Deskflow where I am intentionally sharing mouse and keyboard, and this concept has been at work for over a decade. Notifications are inherently distracting and so getting a new pop up every few minutes compounds the annoyance. It would not be so bad if upon first use of the Input Capture Portal you say a notification for a few seconds but all day every day is the problem.
Comment 9 Bug Janitor Service 2025-03-10 10:32:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/366
Comment 10 David Redondo 2025-03-10 10:53:19 UTC
Git commit 8454987c3c55c876117425cb02f9f7be9258b16d by David Redondo.
Committed on 10/03/2025 at 10:31.
Pushed by davidre into branch 'master'.

Add input capture notification to notifyrc

Make them configurable by the user.
FIXED-IN:6.4

M  +1    -1    src/inputcapture.cpp
M  +8    -0    src/xdg-desktop-portal-kde.notifyrc

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/8454987c3c55c876117425cb02f9f7be9258b16d
Comment 11 David Redondo 2025-03-17 09:35:32 UTC
Git commit 58f13e1c4650564f20c3f497c61f5a5b678eec7e by David Redondo.
Committed on 17/03/2025 at 09:35.
Pushed by davidre into branch 'Plasma/6.3'.

Add input capture notification to notifyrc

Make them configurable by the user.
FIXED-IN:6.3.4


(cherry picked from commit 8454987c3c55c876117425cb02f9f7be9258b16d)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -1    src/inputcapture.cpp
M  +8    -0    src/xdg-desktop-portal-kde.notifyrc

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/58f13e1c4650564f20c3f497c61f5a5b678eec7e
Comment 12 Ben M 2025-04-03 13:39:04 UTC
After update this appears fixed for me. Thanks!