Add input capture notification to notifyrc

Make them configurable by the user.
BUG:500130
FIXED-IN:6.3.4


(cherry picked from commit 8454987c3c55c876117425cb02f9f7be9258b16d)

Co-authored-by: David Redondo <kde@david-redondo.de>